--- a/src/app/buildOrder/templates/buildOrder.left.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.left.tpl.html
@@ -79,7 +79,7 @@
 		</div>
 		<ul class="order-messages">
 			<form ng-submit="addNote(); note.descp=''" ng-show="show">
-				<input type="text" ng-model="note.descp" placeholder="New Note" ng-required/>
+				<input type="text" ng-model="note.descp" placeholder="New Note" id="addNote" ng-required/>
 			</form>
 			<li ng-repeat="note in buildOrderLeft.list.Notes | limitTo: itemsLimit() track by $index">
 				<div class="noteMsg">
