--- a/src/app/hold/templates/hold.tpl.html
+++ b/src/app/hold/templates/hold.tpl.html
@@ -15,6 +15,9 @@
 </div> -->
 <!-- Sweta -->
 <div class="hold-screen-main">
+	<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 back-common">
+	<a href="javascript: window.history.go(-1)">Back</a>
+	</div>
 	<h1>Order Details</h1>
 	<div class="hold-screen">
 		<div>
