--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -1532,9 +1532,9 @@ be a descendant of the grid when it is being dragged.
     /*background: #f7eefe;*/
     background: rgba(171, 157, 206, 0.25);
 }
-.fc-row .fc-content-skeleton {
-	z-index: 0;
-}
+// .fc-row .fc-content-skeleton {
+// 	z-index: 0;
+// }
 .fc-event-container, .fc-event {
 	border: none;
 	border-radius:0px;
@@ -1581,7 +1581,7 @@ be a descendant of the grid when it is being dragged.
 }
 
 
-.calendarModal{
+/*.calendarModal{
  .modal-dialog{
  	width: 80% !important;
 	.modal-content{
@@ -1681,3 +1681,96 @@ be a descendant of the grid when it is being dragged.
 		}	
 	}
 }
+*/
+
+.calendarModal{
+       .calendar{
+			.fc-toolbar {
+				margin: 0;
+				padding: 15px 0;
+				background-color:#a576ca;
+				color: #fff;
+				.fc-left, .fc-right {
+					padding: 0 20px;
+					font-size: 1em;
+					button {
+						border: none;
+						background-color:#a576ca;
+						color: #ddd;
+						background-image: none;
+						text-shadow: none;
+						box-shadow:none;
+						&:hover {
+							background-color:#a576ca;
+						}
+						&:focus, &:active {
+							outline: none;
+						}
+						.fc-icon {
+							color: #fafafa;
+							font-size:14px;
+							.helvetica-regular;
+							height: 28px;
+							line-height: 28px;
+							position: relative;
+							overflow: initial;
+						}
+					}
+				}
+				.fc-icon-left-single-arrow:after {
+					font-size: 1.8em;
+					position: absolute;
+					top: -2px;
+					left: -15px;
+				}
+				.fc-icon-right-single-arrow:after {
+					font-size: 24px;
+					position: absolute;
+					top: -2px;
+					right: -15px;
+				}
+				.fc-center {
+					h2 {
+						font-size:20px;
+						.helvetica-bold;
+					}
+				}
+			}
+			.fc-view-container {
+				.fc-view {
+					.fc-head {
+						background-color: #8c58b5;
+						.fc-head-container {
+							border: none;
+							table {
+								background-color:#8c58b5;
+								.fc-day-header {
+									border: none;
+									color: #fafafa;
+									font-size:16px;
+									.helvetica-regular;
+									padding: 10px 0;
+								}
+							}
+						}
+					}
+				}
+			}
+			.fc-row table {
+				background-color: transparent;
+			}
+			.fc-event-container{
+				.fc-day-grid-event{
+					.fc-content{
+					 .fc-time{
+					 		display:none;
+					 	}
+					}
+				}
+			}
+		}	
+}
+
+
+
+
