--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -760,7 +760,7 @@ input[type=number]::-webkit-outer-spin-button {
 .data_cell {
 	color:@color1;
 	float:left;
-	font-size:13px;
+	font-size:15px;
 	.helvetica-regular;
 	line-height:@height6;
 	padding: 0px 0.5%;
@@ -910,7 +910,7 @@ input[type=number]::-webkit-outer-spin-button {
 		display: inline-block;
 		vertical-align: middle;
 		text-align: left;
-		font-size:11px;
+		font-size:12px;
 		.helvetica-regular;
 		width:35%;
 		color:@color2;
@@ -1813,7 +1813,7 @@ input[type=number]::-webkit-outer-spin-button {
 		margin-left: 13px;
 		border: none;
 		transition: all 0.4s ease-out;
-		padding: 8px 25px;
+		padding: 7.6px 25px;
 		text-decoration:none;
 		color:@color0;
 		 &:before{
@@ -1821,12 +1821,17 @@ input[type=number]::-webkit-outer-spin-button {
 			border: 16px solid #fff;
 			background: inherit;
 			position: absolute;
-			top: 0px;
+			top:0px;
 			left: -30px;
 			border-right-color: #a576ca;
 		 }
 		&:hover{
 			color:@color0;
+			background:#8c58b5;
+			text-decoration:none;
+			&:before{
+			  border-right-color:#8c58b5;	  			
+			}
 		}
 	}
 }
@@ -1836,4 +1841,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .modal-dialog, .modal{
 	z-index: 9999 !important;
+}
+
+.error{
+	/*color:#f32929;*/
+	margin:2px 0px;
+	font-size:12px;
+	  font-family: "helvetica-regular";
 }
