--- a/src/app/checkout/templates/checkout.tpl.html
+++ b/src/app/checkout/templates/checkout.tpl.html
@@ -99,7 +99,7 @@
 										<p>City <span class="star">*</span></p>
 										<input type="text" name="city" ng-if="line.MultipleCities.length <= 1 || !line.MultipleCities" ng-model="line.ShippingAddress.City" ng-readonly="line.xp.addressType=='InStorePickUp' ? true : false" required ng-class="{error: checkout.lineItemForm[line.ID].$submitted && checkout.lineItemForm[line.ID].city.$invalid}"></input>
 										<div ng-if="line.MultipleCities.length > 1" class="multiple-cities">
-											<div uib-dropdown class="form-control " id="MultipleCities" ng-class="{errorMMyy: checkout.lineItemForm[line.ID].$submitted && line.ShippingAddress.City = 'Select City'}">
+											<div uib-dropdown class="form-control " id="MultipleCities" ng-class="{errorMMyy: checkout.lineItemForm[line.ID].$submitted && line.ShippingAddress.City == 'Select City'}">
 												<div id="sort-dropdown" uib-dropdown-toggle>
 													<p class="sort-active-show" ng-init="line.ShippingAddress.City = 'Select City'">{{line.ShippingAddress.City}} <i class="fa fa-chevron-down"></i></p>
 												</div>
@@ -228,8 +228,13 @@
 										</div>
 									</div>
 								</div>
-								<div ng-click="checkout.back($index)" ng-show="checkout.isAddrShow{{$index}}" class="page_header_back">
+								<!-- <div ng-click="checkout.back($index)" ng-show="checkout.isAddrShow{{$index}}" class="page_header_back">
 									<a type="button" href="">Back</a>
+								</div> -->
+								<div ng-click="checkout.back($index)" ng-show="checkout.isAddrShow{{$index}}" class="back-button">
+								    <a type="button" href="">
+									<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 21" style="enable-background:new 0 0 14 21" xml:space="preserve"><style type="text/css">.st0{fill:#8B8E96;}</style><g><path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"></path></g></svg>
+									Back</a>
 								</div>
 								<div class="saved-addr col-sm-5 col-xs-5 col-lg-5 col-md-5vi" ng-show="checkout.isAddrShow{{$index}}">
 										<h3>Saved Delivery Address</h3>
@@ -376,7 +381,7 @@
 									<h3>Delivery Instructions</h3>
 									<p>Delivery Instructions:</p>
 									<textarea rows="3" ng-model="line.xp.deliveryNote"></textarea>
-									<div ng-init="line.cardMsg=false">
+									<div ng-init="line.xp.CardMessage ? line.cardMsg=true : line.cardMsg=false">
 										<div class="no-msg">
 											<span>Card Message</span>
 											<div class="no-msg-cont">
@@ -467,7 +472,7 @@
 									</label>
                                 </div>
                                 <div class="payment-container row" ng-if="card === checkout.selectedCard">
-                                    <div class="pay-m col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+                                    <div class="pay-m col-xs-12 col-sm-12 col-md-10 col-lg-10 col-lg-offset-1">
                                        <div class="col-xs-4 cvv-title">
 										<p>Enter CVV Code <span class="star">*</span></p>
 										</div>
@@ -646,7 +651,7 @@
 									<span class="total">{{checkout.UserSpendingAcc['Bachman Charges'].Balance | currency}}</span>
 								</div>
 								<div class="payment-container row">
-									<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 payment-options">
+									<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 bachmans-charges">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 										<label class="radio-inline radio-common">
 											<input type="radio" ng-model="BachmansCharges" name="BachmansCharge" value="Full" /><span>use {{checkout.UserSpendingAcc['Bachman Charges'].Balance | currency}} Bachman's Charge</span>
@@ -654,13 +659,13 @@
 										</label>	
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-											<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+										<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7 charges-cont">
 											<label class="radio-inline radio-common">
 											<input type="radio" ng-model="BachmansCharges" name="BachmansCharge" value="Custom" /><span>Enter Custom Charge</span>
 											<div class="radio"></div>
 										   </label>
 											</div>
-											<input type="number" ng-model="txtBachmanCharges" class="col-xs-8 col-sm-8 col-md-8 col-lg-8" ng-disabled="BachmansCharges == 'Full'" /><span></span>
+											<input type="number" ng-model="txtBachmanCharges" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" ng-disabled="BachmansCharges == 'Full'" /><span></span>
 										</div>
 										<span style="color:red;" ng-if="txtBachmanCharges > checkout.UserSpendingAcc['Bachman Charges'].Balance">You cannot exceed your balance limit...!</span>
 										<button ng-disabled="txtBachmanCharges > checkout.UserSpendingAcc['Bachman Charges'].Balance" ng-click="checkout.ApplySpendingAccCharges(checkout.UserSpendingAcc['Bachman Charges'], BachmansCharges, txtBachmanCharges, checkout.orderDtls, 'Bachman Charges')">Apply</button>
@@ -743,7 +748,7 @@
 									<span class="total">{{checkout.UserSpendingAcc['Purple Perks'].Balance | currency}}</span>
 								</div>
 								<div class="payment-container row">
-									<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 payment-options">
+									<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 payment-options">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 											<div>
 												<label class="radio-inline radio-common">
@@ -754,7 +759,7 @@
 												</label>
 											</div>
 											<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-												<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+												<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7 charges-cont">
 													 <label class="radio-inline radio-common">
 														<input type="radio" ng-model="PurpleCharges" name="PurpleCharge" value="Custom" /><span>
 															Enter Custom charge
@@ -762,7 +767,7 @@
 														<div class="radio"></div>
 													 </label>
 											     </div>
-											     <input ng-model="txtPurpleCharges" type="number" class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-disabled="PurpleCharges == 'Full'" />
+											     <input ng-model="txtPurpleCharges" type="number" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" ng-disabled="PurpleCharges == 'Full'" />
 											</div>
 										</div>
 										<span style="color:red;" ng-if="txtPurpleCharges > checkout.UserSpendingAcc['Purple Perks'].Balance">You cannot exceed your balance limit...!</span>
@@ -780,7 +785,7 @@
 									<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 											<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 payment-options">
 												<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-													<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 gift-card">
+													<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 po-num">
 														<span>PO Number</span>
 													</div>
 													<input ng-model="checkout.CurrentUser.xp.PO.PONumber" type="text" class="col-xs-6 col-sm-6 col-md-6 col-lg-6" />
@@ -1040,7 +1045,7 @@
 					</uib-accordion-heading>
 					<div class="ordersummaryproductdata" ng-repeat="item in lineitems">
 						<div class="prod-img">
-							<img src="{{item.xp.ProductImageUrl}}">
+							<img src="{{checkout.alfrescoAccessURL}}/imagefinder/{{item.Product.ID}}?alf_ticket={{checkout.alfticket}}">
 						</div>
 						<div class="prod-details">
 							<p>{{item.Product.Name}}</p>
@@ -1058,7 +1063,6 @@
 					<p ng-if="checkout.order.PromotionDiscount > 0"><button ng-click="checkout.RemoveCoupon()">
 						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 							 viewBox="0 0 34 34" style="enable-background:new 0 0 34 34;" xml:space="preserve">
-
 							<g transform="translate(0,-952.36218)">
 							<path  d="M17,952.7c-4.3,0-8.5,1.6-11.8,4.9c-6.5,6.5-6.5,17.1,0,23.6c6.5,6.5,17.1,6.5,23.6,0c6.5-6.5,6.5-17.1,0-23.6
 								v0C25.5,954.3,21.3,952.7,17,952.7L17,952.7z M17,955.8c3.5,0,6.9,1.3,9.6,4c5.3,5.3,5.3,13.8,0,19.1c-5.3,5.3-13.8,5.3-19.1,0
@@ -1068,7 +1072,7 @@
 								c-0.3-0.3-0.7-0.5-1.2-0.5c-0.4,0-0.8,0.2-1.1,0.5l-2.7,2.7l-2.7-2.7C14,964.1,13.6,963.9,13.1,963.9L13.1,963.9z"/>
 							</g>
 					  	</svg>
-						</button> Coupon Applied <span>-{{checkout.order.PromotionDiscount | currency}} </span>
+						</button> Coupon/Promotion Applied <span>-{{checkout.order.PromotionDiscount | currency}} </span>
 					</p>
 					<p ng-if="checkout.orderDtls.SpendingAccounts.BachmansCharges">
 					<button ng-click="checkout.deleteSpendingAcc(checkout.orderDtls, 'BachmansCharges')">
