--- a/src/app/hold/less/hold.less
+++ b/src/app/hold/less/hold.less
@@ -7,6 +7,9 @@
 	padding:25px;
 	overflow-y:auto;
 	background-color:@color0;
+	.back-common{
+	   margin: 0 0 20px -14px;
+	}
 	.order-grid{
 		 padding: 0px;
 		 .ui-grid-filter-container{
