--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -81,6 +81,7 @@
 		<!--Saved Order starts here -->
 		<div class="col-sm-9 saved_order">
 			<h1 class="heading">Saved Orders</h1>
+			<input type="text" ng-model="home.searchText">
 			<div class="col-sm-12 saved_order_table">
 				<div ui-grid="CSRAdminData" class="order-grid col-md-12 col-sm-12"></div>
 			</div>
@@ -94,9 +95,9 @@
 			<button type="button" ng-click="cancelPopUp()">CANCEL</button>
 		</div>
 	</script> -->
-	<modal title="Save Order For Later" visible="home.showcalendarModal" id="calendarmodal" class="modal-pop-up calendarModal">
+	<!--<modal title="Save Order For Later" visible="home.showcalendarModal" id="calendarmodal" class="modal-pop-up calendarModal">
 		<div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources" style="width:100%" id="calendar"></div> 
-	</modal>
+	</modal>-->
 	<modal title="Promotions &amp; Information" visible="home.showpromotionsmodal" id="promotions" class="modal-pop-up promotionsModal">
 		<div class="promo-main">
 			<div ng-repeat="promoLst in home.promotionsList" ng-if="($index < (home.page * 10)) && ($index >= ((home.page - 1) * 10))" >
@@ -157,8 +158,10 @@
 		<!--Order on hold starts here -->	
 		<!--Saved Order starts here -->
 		<div class="col-sm-9 saved_order">
-			<h1 class="heading">Saved Orders</h1>
+			<h1 class="heading">Saved Orders </h1>
+			<input type="text" ng-model="home.searchText">
 			<div class="col-sm-12 saved_order_table">
+
 				<div ui-grid="CSRAdminData" class="order-grid col-md-12 col-sm-12"></div>
 			</div>
 		</div>
